<?xml version="1.0"?>
<package>
  <version>2.0.7</version>
  <name>pr2_gazebo_plugins</name>
  <description>
    Gazebo Plugins for various PR2-specific sensors and actuators on the robot.
  </description>

  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_gazebo_plugins</url>
  <url type="repository">https://github.com/PR2/pr2_simulator</url>
  <url type="bugtracker">https://github.com/PR2/pr2_simulator/issues</url>

  <author>John Hsu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
 <!-- <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend> -->

 <!-- <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend> -->
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>pr2_hardware_interface</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>pr2_mechanism_model</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>polled_camera</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>

  <!-- temporary hack for orocos kdl until it's packaged better upstream -->
  <build_depend>orocos_kdl</build_depend>
  <run_depend>orocos_kdl</run_depend>

</package>
