<?xml version="1.0"?>
<package format="3">
  <version>2.1.0</version>
  <name>pr2_gazebo_plugins</name>
  <description>
    Gazebo Plugins for various PR2-specific sensors and actuators on the robot.
  </description>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_gazebo_plugins</url>
  <url type="repository">https://github.com/PR2/pr2_simulator</url>
  <url type="bugtracker">https://github.com/PR2/pr2_simulator/issues</url>

  <author>John Hsu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>pr2_hardware_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
 <!-- <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend> -->

 <!-- <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend> -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>pr2_hardware_interface</exec_depend>
  <exec_depend>pr2_controller_manager</exec_depend>
  <exec_depend>pr2_mechanism_model</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>polled_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <!-- temporary hack for orocos kdl until it's packaged better upstream -->

  <build_depend condition="$ROS_PYTHON_VERSION == 2">orocos_kdl</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">liborocos-kdl</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">liborocos-kdl-dev</build_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">liborocos-kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">liborocos-kdl-dev</exec_depend>

</package>
